修复外键关联，实现一对多模块处理
