# controller/dishes.go
@@ -1,18 +1,31 @@
 package controller
 
-import "github.com/gin-gonic/gin"
+import (
+	"ele/models"
+	"ele/tools/dao"
+	"github.com/gin-gonic/gin"
+)
 
+// ListDish 列出所有菜品
+// @Tags 订单管理
 // @Summary 列出所有菜品
 // @Description 获取所有菜品列表
 // @Produce json
 // @Success 200 {object} models.Response "获取成功"
 // @Failure 500 {object} models.Response "ErrorResponse"
-// @Router /dishes [get]
-func ListDishes(c *gin.Context) {
-
+// @Router /dish/list [get]
+func ListDish(c *gin.Context) {
+	var values []models.Dish
+	dao.List(&values)
+	c.JSON(200, models.Response{
+		Msg:  "下面是所有菜品信息",
+		Data: values,
+	})
 }
 
+// GetDish 获取菜品信息
 // @Summary 获取菜品信息
+// @Tags 订单管理
 // @Description 根据 ID 获取菜品信息
 // @Produce json
 // @Param dish_id path int true "菜品 ID"
